tests/compile-fail/integration__integration__interrupts__sugar_register.snap
---
source: tests/integration/interrupts.rs
expression: stderr
---
error: const evaluation error in interrupt label
   ┌─ <input>:30:15
   │
30 │     interrupt[I0]:
   │               ^^ non-const expression


